--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower1.png">Klik disini</a>
+            <a href="flower.png">Klik disini</a>
         </button>
         
     </div>
